add SEO and Open Graph

--- a/contact/index.html
+++ b/contact/index.html
@@ -4,7 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Will Hanighen | Amateur Programmer</title>
+  <title>Will Hanighen | Contact</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Contact Will Hanighen, amateur programmer and developer. Get in touch for collaborations, questions, or feedback.">
+  <meta name="keywords" content="Will Hanighen, contact, email, get in touch, programmer contact">
+  <meta name="author" content="Will Hanighen">
+  
+  <!-- Open Graph / Discord Embed Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://willhanighen.github.io/contact/">
+  <meta property="og:title" content="Will Hanighen | Contact">
+  <meta property="og:description" content="Contact Will Hanighen, amateur programmer and developer. Get in touch for collaborations, questions, or feedback.">
+  <meta property="og:image" content="https://willhanighen.github.io/generated-icon.png">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://willhanighen.github.io/contact/">
+  <meta name="twitter:title" content="Will Hanighen | Contact">
+  <meta name="twitter:description" content="Contact Will Hanighen, amateur programmer and developer. Get in touch for collaborations, questions, or feedback.">
+  <meta name="twitter:image" content="https://willhanighen.github.io/generated-icon.png">
+  
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="/js/ab-particles.min.js"></script>
