--- a/index.html
+++ b/index.html
@@ -5,6 +5,29 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Will Hanighen | Amateur Programmer</title>
+  
+  <!-- Google Search Verification -->
+  <meta name="google-site-verification" content="GTuV16iFM9CB15u6CyjeBU-Yjufa6owcLK3bigUL4PA">
+
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Personal website of Will Hanighen, amateur programmer and developer showcasing various projects and skills.">
+  <meta name="keywords" content="Will Hanighen, programming, developer, portfolio, projects, Python">
+  <meta name="author" content="Will Hanighen">
+  
+  <!-- Open Graph / Discord Embed Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://willhanighen.github.io/">
+  <meta property="og:title" content="Will Hanighen | Amateur Programmer">
+  <meta property="og:description" content="Personal website of Will Hanighen, amateur programmer and developer showcasing various projects and skills.">
+  <meta property="og:image" content="https://willhanighen.github.io/generated-icon.png">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://willhanighen.github.io/">
+  <meta name="twitter:title" content="Will Hanighen | Amateur Programmer">
+  <meta name="twitter:description" content="Personal website of Will Hanighen, amateur programmer and developer showcasing various projects and skills.">
+  <meta name="twitter:image" content="https://willhanighen.github.io/generated-icon.png">
+  
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="/js/ab-particles.min.js"></script>  <!-- Source: https://www.cssscript.com/demo/particle-animations-ab/ -->
