--- a/projects/index.html
+++ b/projects/index.html
@@ -5,6 +5,26 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Will Hanighen | Amateur Programmer</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Projects portfolio of Will Hanighen, featuring Python applications and other programming projects.">
+  <meta name="keywords" content="Will Hanighen, programming projects, Python projects, portfolio, developer projects">
+  <meta name="author" content="Will Hanighen">
+  
+  <!-- Open Graph / Discord Embed Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://willhanighen.github.io/projects/">
+  <meta property="og:title" content="Will Hanighen | Projects">
+  <meta property="og:description" content="Projects portfolio of Will Hanighen, featuring Python applications and other programming projects.">
+  <meta property="og:image" content="https://willhanighen.github.io/generated-icon.png">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://willhanighen.github.io/projects/">
+  <meta name="twitter:title" content="Will Hanighen | Projects">
+  <meta name="twitter:description" content="Projects portfolio of Will Hanighen, featuring Python applications and other programming projects.">
+  <meta name="twitter:image" content="https://willhanighen.github.io/generated-icon.png">
+  
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="/js/ab-particles.min.js"></script>
