--- a/resume/index.html
+++ b/resume/index.html
@@ -4,7 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Will Hanighen | Amateur Programmer</title>
+  <title>Will Hanighen | Resume</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Resume of Will Hanighen, amateur programmer and developer. View education, skills, experience, and qualifications.">
+  <meta name="keywords" content="Will Hanighen, resume, CV, skills, education, experience, programmer resume">
+  <meta name="author" content="Will Hanighen">
+  
+  <!-- Open Graph / Discord Embed Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://willhanighen.github.io/resume/">
+  <meta property="og:title" content="Will Hanighen | Resume">
+  <meta property="og:description" content="Resume of Will Hanighen, amateur programmer and developer. View education, skills, experience, and qualifications.">
+  <meta property="og:image" content="https://willhanighen.github.io/generated-icon.png">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://willhanighen.github.io/resume/">
+  <meta name="twitter:title" content="Will Hanighen | Resume">
+  <meta name="twitter:description" content="Resume of Will Hanighen, amateur programmer and developer. View education, skills, experience, and qualifications.">
+  <meta name="twitter:image" content="https://willhanighen.github.io/generated-icon.png">
+  
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="/js/ab-particles.min.js"></script>
   <!-- Source: https://www.cssscript.com/demo/particle-animations-ab/ -->
