--- a/projects/python/grade-calc/index.html
+++ b/projects/python/grade-calc/index.html
@@ -4,7 +4,27 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Will Hanighen | Amateur Programmer</title>
+  <title>Will Hanighen | Grade Calculator</title>
+  
+  <!-- SEO Meta Tags -->
+  <meta name="description" content="Grade Calculator Python application by Will Hanighen. Calculate your final grade based on assignments, tests, and other criteria.">
+  <meta name="keywords" content="Will Hanighen, Python, grade calculator, academic tool, GPA calculator, Python application">
+  <meta name="author" content="Will Hanighen">
+  
+  <!-- Open Graph / Discord Embed Meta Tags -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://willhanighen.github.io/projects/python/grade-calc/">
+  <meta property="og:title" content="Will Hanighen | Grade Calculator">
+  <meta property="og:description" content="Grade Calculator Python application by Will Hanighen. Calculate your final grade based on assignments, tests, and other criteria.">
+  <meta property="og:image" content="https://willhanighen.github.io/generated-icon.png">
+  
+  <!-- Twitter Card Meta Tags -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:url" content="https://willhanighen.github.io/projects/python/grade-calc/">
+  <meta name="twitter:title" content="Will Hanighen | Grade Calculator">
+  <meta name="twitter:description" content="Grade Calculator Python application by Will Hanighen. Calculate your final grade based on assignments, tests, and other criteria.">
+  <meta name="twitter:image" content="https://willhanighen.github.io/generated-icon.png">
+  
   <link rel="icon" href="/imgs/favicon.ico" type="image/x-icon">
   <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
   <script src="/js/ab-particles.min.js"></script>
