--- a/footer.html
+++ b/footer.html
@@ -29,5 +29,6 @@
   
   <div class="copyright">
     <p>&copy; <span id="current-year"></span> Will Hanighen. All rights reserved.</p>
+    <p class="license-note">Licensed under <a href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a>: You can use, share, and adapt this work for non-commercial purposes as long as you give appropriate credit.</p>
   </div>
 </footer>
