Remove announcement bar, update email addresses, fix overlap and offset

--- a/footer.html
+++ b/footer.html
@@ -22,7 +22,7 @@
     <div class="footer-section">
       <h3>Contact</h3>
       <ul class="footer-links">
-        <li><a href="mailto:willhanighen@gmail.com">willhanighen@gmail.com</a></li>
+        <li><a href="mailto:willplays2022@gmail.com">willplays2022@gmail.com</a></li>
       </ul>
     </div>
   </div>
