--- a/navbar-modern.html
+++ b/navbar-modern.html
@@ -20,6 +20,6 @@
     </div>
   </div>
 </nav>
-<div class="announcement-bar">
+<!-- <div class="announcement-bar">
   <span>This site is currently being re-designed. Please be patient if something doesn't work or is still in the old design.</span>
-</div>
+</div> -->
