--- a/projects/web/index.html
+++ b/projects/web/index.html
@@ -58,7 +58,7 @@
       <div class="projects-grid">
         <!-- Personal Portfolio -->
         <div class="project-card">
-          <img src="/imgs/bingo.jpg" alt="Personal Portfolio Project" onerror="this.src='/imgs/placeholder.jpg'">
+          <img src="/imgs/bingo.png" alt="Personal Portfolio Project" onerror="this.src='/imgs/placeholder.jpg'">
           <div class="project-content">
             <h3>Bingo</h3>
             <p>A responsive Bingo game built with HTML5, CSS3, and JavaScript with smooth animations and a user-friendly interface.</p>
@@ -69,6 +69,24 @@
             </div>
             <div class="project-links">
               <a href="/bingo" class="cta-button">View Project <i class="fas fa-arrow-right"></i></a>
+              <!-- in a diffrent github repo -->
+            </div>
+          </div>
+        </div>
+        <!-- CottageWare -->
+        <div class="project-card">
+          <img src="/imgs/cottageware.png" alt="Personal Portfolio Project" onerror="this.src='/imgs/placeholder.jpg'">
+          <div class="project-content">
+            <h3>CottageWare</h3>
+            <p>A Fourm and Reselling site for gaming products</p>
+            <div class="project-tags">
+              <span class="project-tag">Live Updates</span>
+              <span class="project-tag">HTMX</span>
+              <span class="project-tag">CSS</span>
+              <span class="project-tab">JS</span>
+            </div>
+            <div class="project-links">
+              <a href="https://cottageware-3brk.onrender.com/" class="cta-button">View Project <i class="fas fa-arrow-right"></i></a>
               <!-- in a diffrent github repo -->
             </div>
           </div>
