--- a/projects/index.html
+++ b/projects/index.html
@@ -134,6 +134,25 @@
             </div>
           </div>
         </div>
+
+        <!-- CottageWare -->
+        <div class="project-card">
+          <img src="/imgs/portfolio.jpg" alt="Personal Portfolio Project" onerror="this.src='/imgs/placeholder.jpg'">
+          <div class="project-content">
+            <h3>CottageWare</h3>
+            <p>A Fourm and Reselling site for gaming products</p>
+            <div class="project-tags">
+              <span class="project-tag">Live Updates</span>
+              <span class="project-tag">HTMX</span>
+              <span class="project-tag">CSS</span>
+              <span class="project-tab">JS</span>
+            </div>
+            <div class="project-links">
+              <a href="https://cottageware-3brk.onrender.com/" class="cta-button">View Project <i class="fas fa-arrow-right"></i></a>
+              <!-- in a diffrent github repo -->
+            </div>
+          </div>
+        </div>
         
       </div>
       
