--- a/projects/web/index.html
+++ b/projects/web/index.html
@@ -83,7 +83,7 @@
               <span class="project-tag">Live Updates</span>
               <span class="project-tag">HTMX</span>
               <span class="project-tag">CSS</span>
-              <span class="project-tab">JS</span>
+              <span class="project-tag">JS</span>
             </div>
             <div class="project-links">
               <a href="https://cottageware-3brk.onrender.com/" class="cta-button">View Project <i class="fas fa-arrow-right"></i></a>
@@ -124,6 +124,9 @@
       <p>&copy; 2025 Will Hanighen. All rights reserved.</p>
     </div>
   </footer>
+
+  <canvas id="particles"></canvas>
+  
 </body>
 
 </html>
