--- a/projects/index.html
+++ b/projects/index.html
@@ -62,7 +62,7 @@
           <img src="/imgs/temp-converter.jpg" alt="Temperature Converter Project" onerror="this.src='/imgs/placeholder.jpg'">
           <div class="project-content">
             <h3>Temperature Converter</h3>
-            <p>A Python application that converts between different temperature units including Celsius, Fahrenheit, and Kelvin.</p>
+            <p>A Python application that converts between different temperature units, including Celsius, Fahrenheit, and Kelvin.</p>
             <div class="project-tags">
               <span class="project-tag">Python</span>
               <span class="project-tag">Web</span>
@@ -145,7 +145,7 @@
               <span class="project-tag">Live Updates</span>
               <span class="project-tag">HTMX</span>
               <span class="project-tag">CSS</span>
-              <span class="project-tab">JS</span>
+              <span class="project-tag">JS</span>
             </div>
             <div class="project-links">
               <a href="https://cottageware-3brk.onrender.com/" class="cta-button">View Project <i class="fas fa-arrow-right"></i></a>
